<resources>
    <string name="app_name">拳联之家</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">拳联装备</string>
    <string name="title_notifications">购物车</string>
    <string name="title_js">拳联纪实</string>
    <string name="title_muser">我的</string>

    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>
    <string name="exite_dialog">再按一次退出程序！</string>
    <string name="settings">设置</string>
    <!--网络-->
    <string name="nomessage">暂时没有内容哦</string>
    <string name="net_error">糟糕，加载失败</string>
    <string name="getmessage_agin">重新加载</string>
    <string name="scan_hint">将取景框对准二维码即可自动扫码</string>
    <array name="assble_usersize">
        <item>2人</item>
        <item>3人</item>
        <item>4人</item>
        <item>5人</item>
        <item>8人</item>
        <item>10人</item>
    </array>
</resources>
