<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@mipmap/main_image_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_zhunbei"
        android:icon="@mipmap/main_image_quanlian"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_gwc"
        android:icon="@mipmap/main_image_gwc"
        android:title="@string/title_notifications" />


    <item
        android:id="@+id/navigation_js"
        android:icon="@mipmap/main_image_js"
        android:title="@string/title_js" />


    <item
        android:id="@+id/navigation_muser"
        android:icon="@mipmap/main_image_muser"
        android:title="@string/title_muser" />

</menu>
